# rust-ffmpeg-jpeg-sample

./: Cargo.toml  README.md
src/: main.rs
